--- a/modelo3.ipynb
+++ b/modelo3.ipynb
@@ -221,11 +221,11 @@
    "source": [
     "base_model = MobileNetV2(weights='imagenet', include_top=False, input_shape=(224,224,3))\n",
     "\n",
-    "# Congelar todas las capas convolucionales\n",
+    "# Congelar capas convolucionales\n",
     "for layer in base_model.layers:\n",
     "    layer.trainable = False\n",
     "\n",
-    "# Añadir cabeza personalizada\n",
+    "# Capas custom\n",
     "x = base_model.output\n",
     "x = GlobalAveragePooling2D()(x)\n",
     "x = Dropout(0.5)(x)\n",
